# forex_trading_bot

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: add-feature.md  api-patterns.md  debug.md  git-workflow.md  python-best-practices.md  test.md
.github/workflows/: ci.yml
architecture/: index.html
architecture/ib-api/: index.html
config/: events.yaml  settings.yaml  static_events.yaml
docs/: STRADDLE_OPTIMIZATION_REPORT.md  TODO.md  TRADING_STRATEGIES.md  index.md
docs/architecture/: ib-api.md  index.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/operations/: auto-start.md  hosting-options.md  index.md  process-management.md  telegram-notifications.md
docs/research/: 01-straddle-hourly.md  02-dukascopy-data.md  03-monte-carlo-18mo.md  04-monte-carlo-6yr.md  05-event-type-split.md  (+16 more)
getting-started/: index.html
operations/: index.html
scripts/: backfill_commission.py  check_ib_connection.py  cleanup_stale_orders.py  dedup_events.py  download_dukascopy.py  download_ff_history.py  fetch_historical_events.py  mc_audusd_explore.py  mc_cad_explore.py  mc_cadjpy_japan_deep.py  mc_event_split.py  mc_momentum.py  mc_non_us.py  mc_remaining_us.py  mc_surprise.py  mc_value.py  monte_carlo_dukascopy.py  monte_carlo_straddle.py  quarterly_download.sh  quarterly_reminder.sh  restart_tws_only.sh  start_tws_and_bot.sh  test_straddle_manual.py  watchdog.sh
search/: search_index.json
tests/: conftest.py
trading/: index.html
(+124 files in other folders)
